Fixed mobile alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,10 @@ body {
   justify-content: center;
   width: 100vw;
   height: 100vh;
+
+  @media screen and (max-width: $small-screen) {
+    align-items: stretch;
+  }
 }
 
 img {
